--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^4.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
@@ -33,6 +35,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.17"
   }
 }
