--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "dev": "nodemon server.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@google/generative-ai": "^0.24.0",
+    "@langchain/community": "^0.3.36",
+    "@langchain/core": "^0.3.42",
+    "@langchain/google-vertexai": "^0.2.2",
+    "@langchain/pinecone": "^0.2.0",
+    "@pinecone-database/pinecone": "5",
+    "@prisma/client": "^6.5.0",
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -24,11 +31,14 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "prisma": "^6.4.1",
+    "pdf-parse": "^1.1.1",
+    "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
