--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "type": "commonjs",
   "main": "server.ts",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
